Fixing test that depend on export packages